--- a/css/styleme.css
+++ b/css/styleme.css
@@ -18,21 +18,42 @@ body {
 header {
 	width: 100%;
 	margin: 0;
-	height: 200px;
+	height: 220px;
 }
-.logo{
-	height: 130px;
+
+.logo {
+	height: 160px;
+	background-color: gainsboro;
+	opacity: .6;
+
 }
+
+#logofont {
+	text-align:center;
+	font-family: 'courier new';
+	font-size: 90px;
+	margin: 0;
+}
+
+#subtitle{
+	text-align: center;
+	font-size: 20px;
+	margin: 0px;
+	font-family: 'brush script mt', cursive;
+}
+
 .navbar {
 	display: inline-block;
 	width: 100%;
-	height: 70px;
+	height: 40px;
+	padding-top: 20px;
 }
 
 ul {
 	display: block;
 	list-style-type: disc;
 	margin: 0;
+	font-family: 'courier new';
 	margin-right: auto;
 	margin-left: auto;
 	-webkit-margin-before: 0px;
@@ -45,7 +66,7 @@ ul {
 .navlinks li {
 	display: inline-block;
 	height: 40px;
-	width: 15%;
+	width: 18%;
 	margin-right: auto;
 	margin-left: auto;
 	text-align: center;
@@ -57,6 +78,7 @@ ul {
 	width:100%;
 	text-align: center;
 	float: left;
+
 }
 .fproduct {
 	display: inline-block;
