--- a/css/styleme.css
+++ b/css/styleme.css
@@ -18,34 +18,18 @@ body {
 header {
 	width: 100%;
 	margin: 0;
-	height: 220px;
 }
 
-.logo {
-	height: 160px;
-	background-color: gainsboro;
-	opacity: .6;
-
-}
-
-#logofont {
-	text-align:center;
-	font-family: 'courier new';
-	font-size: 90px;
-	margin: 0;
-}
-
-#subtitle{
-	text-align: center;
-	font-size: 20px;
-	margin: 0px;
-	font-family: 'brush script mt', cursive;
+.topimage{
+	width: 100%;
+    max-width: 100%;
+    z-index: -9999;
 }
 
 .navbar {
 	display: inline-block;
 	width: 100%;
-	height: 40px;
+	height: 180px;
 	padding-top: 20px;
 }
 
@@ -56,6 +40,7 @@ ul {
 	font-family: 'courier new';
 	margin-right: auto;
 	margin-left: auto;
+	text-align: center;
 	-webkit-margin-before: 0px;
     -webkit-margin-after: 0px;
     -webkit-margin-start: 0px;
@@ -66,61 +51,26 @@ ul {
 .navlinks li {
 	display: inline-block;
 	height: 40px;
-	width: 18%;
+	width: 10%;
 	margin-right: auto;
 	margin-left: auto;
 	text-align: center;
 }
 
-.mainimage {
-	display: inline-block;
-	height: 500px;
-	width:100%;
+
+
+#logofont {
+	font-family: 'courier new';
+	width: 30%;
+	font-size: 40px;
+	text-align:center;
+	margin: 0;
+	padding-top:10px;
+}
+
+#subtitle{
 	text-align: center;
-	float: left;
-
-}
-.fproduct {
-	display: inline-block;
-	height:350px;
-	width: 100%;
-	text-align: center;
-	float: left;
-}
-.ourface {
-	display: inline-block;
-	height:400px;
-	width: 100%;
-	text-align: center;
-	float: left;
-}
-
-footer {
-	display: inline-block;
-	width: 100%;	
-	height: 150px;
-}
-
-footer .corplinks {
-	width: 100%;
-	padding: 20px;
-	display: inline-block;
-}
-
-footer .sociallinks {
-	width: 40%;
-	padding: 20px;
-	margin-right: auto;
-	margin-left: auto;
-	display: inline-block;
-}
-
-.sociallinks li {
-	display: inline-block;
-	width: 13.3%;
-	padding: 5px;
-
-}
-.corplinks li{
-	display: inline-block;
+	font-size: 20px;
+	margin: 0px;
+	font-family: 'brush script mt', cursive;
 }
