--- a/css/styleme.css
+++ b/css/styleme.css
@@ -7,6 +7,7 @@
 	width: 100%;
     max-width: 100%;
     z-index: -9999;
+    position: absolute;
 }
 
 body {
@@ -75,4 +76,13 @@ li {
 	font-size: 20px;
 	margin: 0px;
 	font-family: 'brush script mt', cursive;
+}
+
+.married{
+	display: inline-block;
+	color: mediumspringgreen;
+	padding-right: 20%;
+	padding-top: 16%;
+	text-align: center;
+	float: right;
 }
